force-app/main/default/objects/HealthCloudGA__FilterColumn__c/HealthCloudGA__FilterColumn__c.object-meta.xml
<CustomObject>
    <label>Filter Column</label>
    <nameField>
        <label>Filter Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>