force-app/main/default/objects/HealthCloudGA__FilterColumn__c/fields/HealthCloudGA__FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FieldLabel__c</fullName>
    <label>Field Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>