force-app/main/default/objects/HealthCloudGA__FilterColumn__c/fields/HealthCloudGA__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ObjectName__c</fullName>
    <label>Object Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>